# I-am-on-my-own

./: CMakeLists.txt  MINING_IMPLEMENTATION.md  android_bridge.cpp  android_thermal.cpp  buildozer.spec  main.py
.github/Workflows/: build.yml
.github/workflows/: android.yml  main.yml
android/: build.gradle  gradle.properties  gradlew  settings.gradle
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/Java/com/monerominer/: ConfigManager.kt  CrashLogger.kt  MainActivity.kt  MinerApplication.kt  MinerConfig.kt  MinerService.kt  MinerViewModel.kt  SettingsActivity.kt
android/app/src/main/assets/: index.html  miner.js
android/app/src/main/cpp/: CMakeLists.txt  android_battery.cpp  android_battery.h  android_bridge.h  android_main.cpp  android_thermal.h  miner_bridge.cpp
android/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml  ic_mining.xml
android/app/src/main/res/layout/: activity_main.xml  activity_settings.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/app/src/main/res/xml/: backup_rules.xml
cpp/: miner_bridge.cpp
libs/: randomx_wrapper.cpp  randomx_wrapper.h
scripts/: build_release.sh  create_keystores.sh  setup_android_dep.shs
src/: job_handler.cpp  job_handler.h  jop_handler.h  main.cpp  randomx_miner.cpp  randomx_miner.h  stratum_client.cpp  stratum_client.h
